Fixed spacing and font coloring

--- a/css/cam-foundation.css
+++ b/css/cam-foundation.css
@@ -17,7 +17,6 @@
 
 .donating {
 	margin-top: 8rem;
-	/*margin-left: 6rem;*/
 	vertical-align: middle;
 	padding: 0;
 }
@@ -26,7 +25,7 @@
 	font-family: "GT-Walsheim-Medium";
 	color: #ffffff;
 	letter-spacing: .75px;
-	margin-bottom: 1rem;
+	margin-bottom: 2rem;
 	line-height: 130%;
 }
 
@@ -35,4 +34,5 @@
 	color: #ffffff;
 	letter-spacing: .75px;
 	font-size: 16pt;
+	line-height: 1.6;
 }
