--- a/css/map.css
+++ b/css/map.css
@@ -32,5 +32,6 @@
 
 .map-info p {
 	font-size: 18pt;
+	font-weight: 550;
 	margin-top: 20px;
 }
