--- a/css/partnership.css
+++ b/css/partnership.css
@@ -15,9 +15,7 @@
 }
 
 .partnerships p {
-	color: #696a6d;
 	font-size: 16pt;
-	font-family: "GT-Walsheim-Thin";
 	margin-bottom: 5rem;
 }
 
